--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
-language: python - "3.7"
+dist: xenial
+language: python
+python:
+    - "3.7"
 
 install:
     - pip install --user travis-sphinx sphinx-rtd-theme
