--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
     - "3.7"
 
 install:
-    - pip install --user travis-sphinx sphinx-rtd-theme
+    - pip install travis-sphinx sphinx-rtd-theme
 
 script:
     - git clone https://github.com/LamininSolutions/MFSQLConnector
