--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
 
 script:
     - git clone https://github.com/LamininSolutions/connector
-    - find MFSQLConnector -name '*.sql' -exec python doc_extractor.py {} \;
+    - find connector -name '*.sql' -exec python doc_extractor.py {} \;
     - travis-sphinx build --source=./source
 
 after_success:
