--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
     - "3.7"
 
 install:
-    - pip install travis-sphinx sphinx-rtd-theme
+#    - pip install travis-sphinx sphinx-rtd-theme
 
 script:
     - git clone https://github.com/LamininSolutions/connector
@@ -12,4 +12,4 @@ script:
 #    - travis-sphinx build --source=./source
 
 after_success:
-    travis-sphinx deploy
+#    travis-sphinx deploy
